--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <section>
         <div class="section_three">
             <div>
-                <img src="./images/pngwing 4.png">
+                <img width="868" height="489" src="./images/pngwing 4.png">
             </div>
             <div>
                 <h1>We are gamer</h1>
@@ -76,6 +76,33 @@
 
                     “unleash the gamer in everyone”
                 </h2>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <div>
+            <h1 style="text-align: center;">
+                Online Games Funny Videos
+            </h1>
+            <p style="text-align: center;">A Collection of Hilarious Videos to Brighten Your Day</p>
+            <div class="section_four_image">
+                <div>
+                    <img class="sectionforimage" src="./images/Rectangle 4.png">
+                    <p class="sefortext">No Download. No Installs. Play games Instantly on Gamer.</p>
+                </div>
+                <div>
+                    <img class="sectionforimage"  src="./images/Rectangle 5.png">
+                    <p>Did you score? #unblockedgames #school</p>
+                </div>
+                <div>
+                    <img class="sectionforimage"  src="./images/Rectangle 7.png">
+                    <p>Breaking game records like OG</p>
+                </div>
+                <div>
+                    <img class="sectionforimage"  src="./images/Rectangle 6.png">
+                    <p> Busted gaming on school laptop, but you are still lit.</p>
+                </div>
             </div>
         </div>
     </section>
