--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Gamer</title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="icon" type="image/png" href="./images/Frame.png">
 </head>
 
 <body>
@@ -14,13 +16,15 @@
         <div class="header">
             <div class="logo">
                 <img style="margin-top: 15px; margin-right: 10px;" width="86" height="40" src="./images/Frame.png">
-                <h1>Gamer</h1>
+                <h1> <span style="color:red">G</span>amer</h1>
             </div>
             <div class="navitem">
-                <h3 style="margin-right: 10px;">About Us</h3>
-                <h3 style="margin-right: 10px;">Developers</h3>
-                <div>
-                    Follow Us On
+                <h4 style="margin-right: 10px;">About Us</h4>
+                <h4 style="margin-right: 10px;">Developers</h4>
+                <div style="background-color: rgba(128, 128, 128, 0.317); padding: 8px; border-radius: 5px;">
+                    Follow Us On 
+                    <i style="color: red;" class="fab fa-youtube"></i>
+                    <i class="fab fa-tiktok"></i>
                 </div>
             </div>
         </div>
@@ -28,26 +32,26 @@
 
     <section>
         <div class="second_section">
-            <div>
-                <h2>
+            <div style="margin: 0 auto;">
+                <h2 style="text-transform: uppercase; margin: 2px;">
                     Play Like The
                 </h2>
-                <h1>
+                <h1 style="font-size: 40px; font-weight: 900;" class="gradient-text">
                     G.O.A.T.
                 </h1>
 
                 <p>
-                    1-Click instant play
+                    <i style="font-size: 10px; " class="fas fa-play"></i>   1-Click instant play
                 </p>
                 <p>
-                    No Download
+                    <i style="font-size: 10px;" class="fas fa-download"></i>  No Download
                 </p>
                 <p>
-                    1000s of supported online games
+                    <i style="font-size: 10px;" class="fas fa-users"></i>    1000s of supported online games
                 </p>
                 <div>
-                    <button>SING IN</button>
-                    <button>GO ROGUE</button>
+                    <button class="button_one">SING IN</button>
+                    <button class="button_two">GO ROGUE</button>
                 </div>
             </div>
             <div>
@@ -56,23 +60,23 @@
         </div>
     </section>
 
-    <section>
-        <div class="section_three">
+    <section style="margin: 0 5%;">
+        <div style="margin-top: 50px; text-align: right;" class="section_three">
             <div>
-                <img width="868" height="489" src="./images/pngwing 4.png">
+                <img width="668" height="489" src="./images/pngwing 4.png">
             </div>
             <div>
-                <h1>We are gamer</h1>
+                <h1 style="font-weight: 900;" class="gradient-text">We are gamer</h1>
                 <p>
                     An international digital games and entertainment company. We develop, publish and distribute
                     multiplayer mobile games. We reach over 400 million players each month and our audience keeps
                     growing.
                 </p>
-                <button>
+                <button class="button_one">
                     KNOW MORE
                 </button>
-                <p>our purpose...</p>
-                <h2>
+                <p style="margin-bottom: 0;">our purpose...</p>
+                <h2 style="margin: 0;">
 
                     “unleash the gamer in everyone”
                 </h2>
@@ -83,29 +87,124 @@
     <section>
         <div>
             <h1 style="text-align: center;">
-                Online Games Funny Videos
+                Online Games <span class="gradient-text"> Funny Videos</span> 
             </h1>
-            <p style="text-align: center;">A Collection of Hilarious Videos to Brighten Your Day</p>
+            <p style="text-align: center; margin-bottom: 30px;">A Collection of Hilarious Videos to Brighten Your Day</p>
             <div class="section_four_image">
                 <div>
                     <img class="sectionforimage" src="./images/Rectangle 4.png">
                     <p class="sefortext">No Download. No Installs. Play games Instantly on Gamer.</p>
                 </div>
                 <div>
-                    <img class="sectionforimage"  src="./images/Rectangle 5.png">
-                    <p>Did you score? #unblockedgames #school</p>
+                    <img class="sectionforimage" src="./images/Rectangle 5.png">
+                    <p class="sefortext">Did you score? #unblockedgames #school</p>
                 </div>
                 <div>
-                    <img class="sectionforimage"  src="./images/Rectangle 7.png">
-                    <p>Breaking game records like OG</p>
+                    <img class="sectionforimage" src="./images/Rectangle 7.png">
+                    <p class="sefortext">Breaking game records like OG</p>
                 </div>
                 <div>
-                    <img class="sectionforimage"  src="./images/Rectangle 6.png">
-                    <p> Busted gaming on school laptop, but you are still lit.</p>
+                    <img class="sectionforimage" src="./images/Rectangle 6.png">
+                    <p class="sefortext"> Busted gaming on school laptop, but you are still lit.</p>
                 </div>
             </div>
         </div>
     </section>
+
+    <section>
+        <div class="section_five">
+            <div style="text-align: center;">
+                <h1 style="width: 35%; text-align: right; margin: 0 auto;">
+                    <span style="color: #F948B2;"> Play Instantly,</span>
+                    
+                    No Downloads
+                    No Installs.
+                </h1>
+                <p style="width: 65%; text-align: right; margin: 20 auto;">Play games online for free without downloading. Just click the Play button and play instantly in your
+                    browser.</p>
+            </div>
+            <div class="image-container">
+                <img src="./images/Rectangle 55.png">
+                <img class="upperimage" src="./images/Rectangle 66.png">
+              </div>
+            <div>
+
+            </div>
+        </div>
+    </section>
+    <section>
+        <div style="margin-top: 100px;" class="section_six">
+            <div class="six_inner">
+                <img src="./images/Rectangle 11.png">
+                <p>Action Games</p>
+            </div>
+            <div class="six_inner">
+                <img src="./images/Rectangle 12.png">
+                <p>Adventure Games</p>
+            </div>
+            <div class="six_inner">
+                <img src="./images/Rectangle 13.png">
+                <p>Arcade Games</p>
+            </div>
+            <div class="six_inner">
+                <img src="./images/Rectangle 14.png">
+                <p>Educational Games</p>
+            </div>
+            <div class="six_inner">
+                <img src="./images/Rectangle 15.png">
+                <p>Word Games</p>
+            </div>
+            <div class="six_inner">
+                <img src="./images/Rectangle 16.png">
+                <p>Role Palying Games</p>
+            </div>
+            <div class="six_inner">
+                <img src="./images/Rectangle 17.png">
+                <p>Music & Audio Games</p>
+            </div>
+            <div class="six_inner">
+                <img src="./images/Rectangle 18.png">
+                <p>Puzzle Games</p>
+            </div>
+            <div class="six_inner">
+                <img src="./images/Rectangle 19.png">
+                <p>Strategy Games</p>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <div class="footer">
+            <div style="cursor: pointer;" class="footerlogo">
+                <img style="margin-right: 10px;" width="66" height="30" src="./images/Frame.png">
+                <h1> <span style="color: #F948B2;">G</span>amer</h1>
+            </div>
+            <div style="display: flex; cursor: pointer; justify-content: center; ">
+                <p class="linksfooter">Our Story</p>
+                <p class="linksfooter">Games</p>
+                <p class="linksfooter">Web Games</p>
+                <p class="linksfooter">Careers</p>
+                <p class="linksfooter">Support</p>
+                <p class="linksfooter">My Account</p>
+            </div>
+            <div style="display: flex; cursor: pointer; margin-top: 30px; justify-content: center;">
+                <i class="fab fa-twitter iconsclass"></i>
+                <i style="" class="fab fa-facebook iconsclass"></i>
+                <i class="fab fa-youtube iconsclass"></i>
+                <i class="fab fa-linkedin iconsclass"></i>
+                <i class="fab fa-apple iconsclass"></i>
+            </div>
+            <div style="display: flex; margin-top: 30px; justify-content: center;">
+                <p class="linksfooter footerlinkcolor">Terms and Conditions</p>
+                <p class="linksfooter footerlinkcolor">Privacy Policy</p>
+                <p class="linksfooter footerlinkcolor">Cookie Policy</p>
+                <p class="linksfooter footerlinkcolor">Privacy Settings</p>
+            </div>
+            <div>
+<p style="text-align: center; cursor: text; margin-top: 0;" class="footerlinkcolor">Play Games &copy Gamer @ 2000-2023 Gamer Bangladesh</p>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
