--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
     <header>
         <div class="header">
             <div class="logo">
-                <img style="margin-top: 15px; margin-right: 10px;" width="86" height="40" src="./images/Frame.png">
+                <img style="margin-top: 24px; margin-right: 10px;" width="66" height="30" src="./images/Frame.png">
                 <h1> <span style="color:red">G</span>amer</h1>
             </div>
             <div class="navitem">
                 <h4 style="margin-right: 10px;">About Us</h4>
                 <h4 style="margin-right: 10px;">Developers</h4>
                 <div style="background-color: rgba(128, 128, 128, 0.317); padding: 8px; border-radius: 5px;">
-                    Follow Us On 
+                    Follow Us On
                     <i style="color: red;" class="fab fa-youtube"></i>
                     <i class="fab fa-tiktok"></i>
                 </div>
@@ -41,13 +41,13 @@
                 </h1>
 
                 <p>
-                    <i style="font-size: 10px; " class="fas fa-play"></i>   1-Click instant play
+                    <i style="font-size: 10px; " class="fas fa-play"></i> 1-Click instant play
                 </p>
                 <p>
-                    <i style="font-size: 10px;" class="fas fa-download"></i>  No Download
+                    <i style="font-size: 10px;" class="fas fa-download"></i> No Download
                 </p>
                 <p>
-                    <i style="font-size: 10px;" class="fas fa-users"></i>    1000s of supported online games
+                    <i style="font-size: 10px;" class="fas fa-users"></i> 1000s of supported online games
                 </p>
                 <div>
                     <button class="button_one">SING IN</button>
@@ -87,11 +87,15 @@
     <section>
         <div>
             <h1 style="text-align: center;">
-                Online Games <span class="gradient-text"> Funny Videos</span> 
+                Online Games <span class="gradient-text"> Funny Videos</span>
             </h1>
-            <p style="text-align: center; margin-bottom: 30px;">A Collection of Hilarious Videos to Brighten Your Day</p>
+            <p style="text-align: center; margin-bottom: 30px;">A Collection of Hilarious Videos to Brighten Your Day
+            </p>
+
+
             <div class="section_four_image">
                 <div>
+                    
                     <img class="sectionforimage" src="./images/Rectangle 4.png">
                     <p class="sefortext">No Download. No Installs. Play games Instantly on Gamer.</p>
                 </div>
@@ -116,17 +120,18 @@
             <div style="text-align: center;">
                 <h1 style="width: 35%; text-align: right; margin: 0 auto;">
                     <span style="color: #F948B2;"> Play Instantly,</span>
-                    
+
                     No Downloads
                     No Installs.
                 </h1>
-                <p style="width: 65%; text-align: right; margin: 20 auto;">Play games online for free without downloading. Just click the Play button and play instantly in your
+                <p style="width: 65%; text-align: right; margin: 20 auto;">Play games online for free without
+                    downloading. Just click the Play button and play instantly in your
                     browser.</p>
             </div>
             <div class="image-container">
                 <img src="./images/Rectangle 55.png">
                 <img class="upperimage" src="./images/Rectangle 66.png">
-              </div>
+            </div>
             <div>
 
             </div>
@@ -201,7 +206,8 @@
                 <p class="linksfooter footerlinkcolor">Privacy Settings</p>
             </div>
             <div>
-<p style="text-align: center; cursor: text; margin-top: 0;" class="footerlinkcolor">Play Games &copy Gamer @ 2000-2023 Gamer Bangladesh</p>
+                <p style="text-align: center; cursor: text; margin-top: 0;" class="footerlinkcolor">Play Games &copy
+                    Gamer @ 2000-2023 Gamer Bangladesh</p>
             </div>
         </div>
     </footer>
